# conversational-bi-assistant

./: .env.example  .gitignore  README.md  agent.py  docker-compose.yml  get_sid.sh  ingest.py  one_sse_demo.sh  pyproject.toml  run_demo.sh  test.sh  test_2.sh  test_3.sh
.github/workflows/: ci.yml
mcp_server/: Dockerfile  mcp_config.json
scripts/: 00_db_roles.sql  01_create_views.sql
tests/: test_ingest.py  test_kpi_views.py  test_views.py
