[project]
name = "conversational-bi-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "rkendev",email = "aspjscript@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
